--- a/VrcTracer/VrcTracer.csproj
+++ b/VrcTracer/VrcTracer.csproj
@@ -41,6 +41,7 @@
     <Compile Include="MainClass.cs" />
     <Compile Include="PlayerMarker.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UIExpansionKitHelper.cs" />
     <Compile Include="WorldCheck.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -54,6 +55,9 @@
       <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\VRChat\MelonLoader\MelonLoader.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="UIExpansionKit">
+      <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\VRChat\Mods\UIExpansionKit.dll</HintPath>
+    </Reference>
     <Reference Include="UnhollowerBaseLib">
       <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\VRChat\MelonLoader\Managed\UnhollowerBaseLib.dll</HintPath>
     </Reference>
